Search placholder - fix alignment (#2284)
* Search placholder - fix alignment

* Fix label padding

--- a/src/components/search/_search.scss
+++ b/src/components/search/_search.scss
@@ -1,8 +1,6 @@
 .ons-search-component {
   display: flex;
   flex-flow: row wrap;
-  margin-left: -0.5rem;
-  margin-top: -0.5rem;
 
   @include mq(s) {
     flex-flow: row nowrap !important;
@@ -10,8 +8,9 @@
   .ons-search__btn {
     margin-top: -3px;
   }
-  .ons-search__btn,
-  .ons-search__input {
-    margin-left: 0.5rem;
+  .ons-search__btn {
+    @include mq(s) {
+      margin-left: 0.5rem;
+    }
   }
 }
